# Game-Technology

./: .gitignore  README.md
a1/: .#BaseApplication.cpp  BallApp  BallApp.cpp  BallApp.h  BaseApplication.cpp  Makefile  Makefile.am  Makefile.in  PROJECT_DESCRIPTION  Physics.cpp  Physics.h  README  TutorialApplication.cpp  aclocal.m4  config.status  configure  configure.lineno  libtool  ogre.cfg  plugins.cfg
a1/.deps/: BallApp-BallApp.Po  BallApp-BaseApplication.Po  BallApp-Physics.Po  OgreApp-BaseApplication.Po  OgreApp-TutorialApplication.Po
a1/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
a2/: Ball.cpp  BallApp.cpp  BallApp.h  GameObject.cpp  GameObject.h  Makefile.am  OgreMotionState.cpp  OgreMotionState.h  PROJECT_DESCRIPTION  Physics.cpp  Physics.h  README  Racquet.cpp  RacquetApp.cpp  RacquetApp.h  RacquetObject.h  configure.ac  design.txt  design_week2.txt  ogre.cfg  plugins.cfg  resources.cfg
a2/media/materials/scripts/: Court.material
a2/src/: .#RacquetApp.cpp  Ball.cpp  BaseApplication.cpp  BaseApplication.h  Collisions.h  Dude.cpp  GameObject.cpp  GameObject.h  OgreMotionState.cpp  Physics.cpp  Physics.h  Plane.cpp  Racquet.cpp  RacquetApp.cpp  RacquetApp.h  RacquetObject.h  SDL_mixer.h  Sounds.cpp  Sounds.h  main.cpp
a3/: Makefile.am  PROJECT_DESCRIPTION  README.md  configure.ac  design_doc.txt  design_doc_wk2.txt  ogre.cfg  resources.cfg
a3/media/menu/imagesets/: MenuBackground.imageset  MenuButtons.imageset
a3/media/menu/layouts/: Chat.layout  Chatbox.layout  Menu.layout  MultiSubMenu.layout
a3/media/menu/schemes/: GameGUI.scheme
a3/media/particle/: Examples.particle
a3/src/: Ball.cpp  BaseApplication.cpp  BaseApplication.h  BaseMultiplayerApp.cpp  BaseMultiplayerApp.h  ClientApp.cpp  ClientApp.h  Dude.cpp  GameObject.cpp  GameObject.h  HostApp.cpp  HostApp.h  MenuApp.cpp  MenuApp.h  MultiPlayerApp.cpp  MultiPlayerApp.h  Networking.cpp  Networking.h  Physics.cpp  Physics.h  Racquet.cpp  RacquetApp.cpp  RacquetApp.h  RacquetObject.h  SDL.h  Sounds.cpp  Sounds.h  common.cpp  common.h
a4/: IDEAS  Makefile.am  PROJECT_DESCRIPTION  README.md  configure.ac  project-proposal.txt  resources.cfg
a4/data/: Bonus.obhs  Expansion.obhs  Helix-Run.obhs  JESUS-CHRIST.obhs  Leap.obhs  Pump-It.obhs  Tunnel-of-aiwjdiad.obhs  aaa.obhs  alyssaLevel.obhs  baseLevel.obhs  clearPath.obhs  guidedPath.obhs  leap.obhs  mattLevel.obhs
a4/data/hosts/: .nfs0000000001d7808300000cbe  hosts.txt
a4/libs/: ConfigLoader.hpp  ConfigScript.cpp  MeshStrider.cpp  MeshStrider.h  MovableTextOverlay.cpp  MovableTextOverlay.h  RectLayoutManager.cpp  RectLayoutManager.h
a4/libs/OgreProcedural/..../: ProceduralMeshGenerator.h
a4/libs/OgreProcedural/include/: ProceduralMeshGenerator.h  ProceduralTriangleBuffer.h
a4/media/OgreBall/materials/scripts/: OgreBall.material
a4/media/OgreBall/menu/animations/: ogreAnims.xml
a4/media/OgreBall/menu/fonts/: helvetica-12.font  helvetica-16.font  helvetica-32.font  helvetica.font
a4/media/OgreBall/menu/imagesets/: MenuBackground.imageset  OgreBall.imageset  OgreBallButtons.imageset
a4/media/OgreBall/menu/layouts/: Chatbox.layout  GameLobby.layout  GameOver.layout  GameWon.layout  HostPrompt.layout  HostsMenu.layout  Leaderboard.layout  LevelSelector.layout  Menu.layout  MultiGameEnd.layout  MultiSubMenu.layout  OptionMenu.layout  PauseMenu.layout  PlayerSelector.layout  Prompt.layout  ServerList.layout  SinglePlayerHUD.layout
a4/media/OgreBall/menu/looknfeel/: OgreBall.looknfeel
a4/media/OgreBall/menu/schemes/: OgreBall.scheme
a4/media/OgreBall/scripts/: extrudedmeshes.ogreball  levels.ogreball  planemeshes.ogreball
a4/media/OgreBall/scripts/levels/: Bonus.ogreball  Bonus.orgreball  Expansion.ogreball  Helix.ogreball  Leap-of-Faith.ogreball  README.md  aaa.ogreball  alyssaLevel.ogreball  baseLevel.ogreball  clearPath.ogreball  guidedPath.ogreball  jesus.ogreball  mattLevel.ogreball  menuBG.ogreball  pumpfactory.ogreball  roundabout.ogreball  test.ogreball  tunnel.ogreball
a4/media/OgreBall/scripts/meshes/: README.md  extrudedmeshes.ogreball  helix.ogreball  tunnel.ogreball
a4/media/fonts/: bluehighway.fontdef
a4/media/materials/scripts/: OgreBall.material
a4/src/: .#OgreBallApplication.cpp  Activity.h  BaseApplication.cpp  BaseApplication.h  BaseMultiActivity.cpp  BaseMultiActivity.h  Bumper.cpp  CameraObject.cpp  CameraObject.h  ClientPlayerActivity.cpp  ClientPlayerActivity.h  Collectible.cpp  Collidable.cpp  Collisions.cpp  Collisions.h  DecorativeObject.cpp  ExtrudedObject.cpp  GameObject.cpp  GameObject.h  GameObjectDescription.h  GamecubeController.cpp  GamecubeController.h  GoalObject.cpp  HostPlayerActivity.cpp  HostPlayerActivity.h  Interpolator.cpp  Interpolator.h  Leaderboard.h  LevelLoader.cpp  LevelLoader.h  LevelViewer.cpp  LevelViewer.h  MenuActivity.cpp  MenuActivity.h  MeshObject.cpp  Networking.cpp  Networking.h  OBAnimationManager.h  OgreBall.cpp  OgreBallApplication.cpp  (+14 more)
common/: AppDelegate.h  BaseApplication.cpp  Makefile.am  README  TutorialApplication.cpp  plugins.cfg  power_clean  resources.cfg
