AC_INIT(configure.ac)
AM_INIT_AUTOMAKE(SampleApp, 0.1)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIR([m4])

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(OGRE, [OGRE >= 1.2])
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)

PKG_CHECK_MODULES(OIS, [OIS >= 1.0])
AC_SUBST(OIS_CFLAGS)
AC_SUBST(OIS_LIBS)

PKG_CHECK_MODULES(CEGUI, [CEGUI >= 0.7])
AC_SUBST(CEGUI_CFLAGS)
AC_SUBST(CEGUI_LIBS)

PKG_CHECK_MODULES(CEGUI_OGRE, [CEGUI-OGRE >= 0.7])
AC_SUBST(CEGUI_OGRE_CFLAGS)
AC_SUBST(CEGUI_OGRE_LIBS)


PKG_CHECK_MODULES(bullet, [bullet >= 2.79])
AC_SUBST(BULLET_CFLAGS)
AC_SUBST(BULLET_LIBS)

PKG_CHECK_MODULES(sdl, [sdl >= 1.2])
AC_SUBST(SDL_CFLAGS)
AC_SUBST(SDL_LIBS)

SDLMIXER_CFLAGS=`sdl-config --cflags`
SDLMIXER_LIBS="`sdl-config --libs` -lSDL_mixer"
AC_SUBST(SDLMIXER_CFLAGS)
AC_SUBST(SDLMIXER_LIBS)

SDLNET_CFLAGS=`sdl-config --cflags`
SDLNET_LIBS="`sdl-config --libs` -lSDL_net"
AC_SUBST(SDLNET_CFLAGS)
AC_SUBST(SDLNET_LIBS)


AC_CONFIG_FILES(Makefile)
AC_OUTPUT
